<resources>
    <string name="app_name">My Application</string>
    <string name="text_titulo">Aplicativo Lista Vit Curso Android</string>
    <string name="text_name">Name</string>
    <string name="text_Sobrenome">Sobrenome</string>
    <string name="text_hint_edit_nome_do_curso">Nome Do Curso</string>
    <string name="text_hint_edit_telefone_contato">Telefone</string>
    <string name="txt_button_limpar">Limpar</string>
    <string name="text_button_salvar">Salvar</string>
    <string name="text_button_finalizar">Finalizar</string>
    <string name="string_entrada_de_sobrenome_hint">string/entrada_de_sobrenome_hint</string>
</resources>