<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="417dp"
        android:layout_height="737dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".MainActivity"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-6dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:text="@string/text_titulo"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/editTextText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.014"
            tools:ignore="UnknownId" />

        <EditText
            android:id="@+id/txt_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="text"
            android:text="@string/text_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="DuplicateIds,LabelFor,MissingConstraints"
            tools:layout_editor_absoluteY="114dp" />

        <EditText
            android:id="@+id/edit_primeiro_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:autofillHints="Nome"
            android:ems="10"
            android:inputType="text"
            android:text="@string/text_Sobrenome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.468"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="LabelFor,MissingConstraints"
            tools:layout_editor_absoluteY="177dp" />

        <EditText
            android:id="@+id/edit_nome_do_curso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:autofillHints="Sobrenome"
            android:ems="10"
            android:hint="@string/string_entrada_de_sobrenome_hint"
            android:inputType="text"
            android:text="@string/text_hint_edit_nome_do_curso"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="241dp" />


        <EditText
            android:id="@+id/edit_text_telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:autofillHints="Telefone"
            android:ems="10"
            android:inputType="text"
            android:text="@string/text_hint_edit_telefone_contato"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="322dp" />


        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="48dp"
            android:background="@color/corBotoes"
            android:text="@string/text_button_salvar"
            app:layout_constraintBottom_toTopOf="@+id/text_button_finalizar"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/txt_button_limpar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:layout_marginBottom="48dp"
            android:background="@color/corBotoes"
            android:text="@string/txt_button_limpar"
            app:layout_constraintBottom_toTopOf="@+id/text_button_finalizar"
            tools:layout_editor_absoluteX="59dp" />

        <Button
            android:id="@+id/text_button_finalizar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/corBotoes"
            android:text="@string/text_button_finalizar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.856"
            tools:layout_editor_absoluteX="16dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>